--- a/trunk/projects/CodeBlocks10/QuimeraEngineTestApp/QuimeraEngineTestApp/QuimeraEngineTestApp.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngineTestApp/QuimeraEngineTestApp/QuimeraEngineTestApp.cbp
@@ -15,13 +15,14 @@
 				<Option projectIncludeDirsRelation="2" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-fpermissive" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
-					<Add library="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineCommon.a" />
-					<Add library="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineTools.a" />
-					<Add library="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineSystem.a" />
-					<Add library="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineCore.a" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineCommon.a" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineTools.a" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineSystem.a" />
+					<Add library="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineCore.a" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
 				</Linker>
 			</Target>
@@ -35,11 +36,13 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
+					<Add directory="../../../../headers" />
 				</Compiler>
 				<Linker>
-					<Add library="$(WORKSPACEDIR)/../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCore.lib" />
-					<Add library="$(WORKSPACEDIR)/../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineSystem.lib" />
-					<Add library="$(WORKSPACEDIR)/../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineTools.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineSystem.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic" />
 				</Linker>
 			</Target>
@@ -53,6 +56,7 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
+					<Add directory="../../../../headers" />
 				</Compiler>
 				<Linker>
 					<Add library="libQuimeraEngineCommon.a" />
@@ -82,10 +86,10 @@
 					<Add option="-DQE_PREPROCESSOR_IMPORTLIB_QUIMERAENGINE" />
 				</Compiler>
 				<Linker>
-					<Add library="./QuimeraEngineCommon.so" />
-					<Add library="./QuimeraEngineTools.so" />
-					<Add library="./QuimeraEngineSystem.so" />
-					<Add library="./QuimeraEngineCore.so" />
+					<Add library=".\QuimeraEngineCommon.so" />
+					<Add library=".\QuimeraEngineTools.so" />
+					<Add library=".\QuimeraEngineSystem.so" />
+					<Add library=".\QuimeraEngineCore.so" />
 				</Linker>
 				<ExtraCommands>
 					<Add before="mkdir -p $(TARGET_OUTPUT_DIR)" />
