--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj
@@ -90,6 +90,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\headers\AllocationOperators.h" />
     <ClInclude Include="..\..\..\..\headers\Assertions.h" />
     <ClInclude Include="..\..\..\..\headers\CommonDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\Configuration.h" />
@@ -103,6 +104,7 @@
     <ClInclude Include="..\..\..\..\headers\SQVF32.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\source\AllocationOperators.cpp" />
     <ClCompile Include="..\..\..\..\source\Assertions.cpp" />
     <ClCompile Include="..\..\..\..\source\QAlignment.cpp" />
     <ClCompile Include="..\..\..\..\source\SQBoolean.cpp" />
