--- a/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Common/Common.vcxproj.filters
@@ -35,6 +35,13 @@
     <ClInclude Include="..\..\..\..\headers\AllocationOperators.h">
       <Filter>Memory</Filter>
     </ClInclude>
+
+    <ClInclude Include="..\..\..\..\headers\QStringUnicode.h">
+      <Filter>DataTypes</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\QCharUnicode.h">
+      <Filter>DataTypes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\SQBoolean.cpp">
@@ -55,6 +62,13 @@
     </ClCompile>
     <ClCompile Include="..\..\..\..\source\AllocationOperators.cpp">
       <Filter>Memory</Filter>
+    </ClCompile>
+
+    <ClCompile Include="..\..\..\..\source\QStringUnicode.cpp">
+      <Filter>DataTypes</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\source\QCharUnicode.cpp">
+      <Filter>DataTypes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
