--- a/trunk/projects/CodeBlocks10/QuimeraEngineTestApp/QuimeraEngineTestApp/QuimeraEngineTestApp.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngineTestApp/QuimeraEngineTestApp/QuimeraEngineTestApp.cbp
@@ -15,7 +15,6 @@
 				<Option projectIncludeDirsRelation="2" />
 				<Compiler>
 					<Add option="-g" />
-					<Add option="-fpermissive" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
@@ -36,14 +35,16 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
-					<Add directory="../../../../headers" />
 				</Compiler>
 				<Linker>
-					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" />
-					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineSystem.lib" />
-					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
 					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineSystem.lib" />
+					<Add library="$(WORKSPACEDIR)\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" />
+					<Add library="sicuuc" />
+					<Add library="ssicudt" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic" />
+					<Add directory="../../../../3rdparty/ICU/bin/Win32/ReleaseSharedrtStatic/MinGW" />
 				</Linker>
 			</Target>
 			<Target title="DebugWin32SharedrtDynamic">
@@ -56,14 +57,16 @@
 				<Compiler>
 					<Add option="-g" />
 					<Add option="-D_DEBUG" />
-					<Add directory="../../../../headers" />
 				</Compiler>
 				<Linker>
 					<Add library="libQuimeraEngineCommon.a" />
 					<Add library="libQuimeraEngineTools.a" />
 					<Add library="libQuimeraEngineSystem.a" />
 					<Add library="libQuimeraEngineCore.a" />
+					<Add library="libicudt.dll.a" />
+					<Add library="libicuuc.dll.a" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic" />
+					<Add directory="../../../../3rdparty/ICU/bin/Win32/ReleaseSharedrtDynamic/MinGW" />
 				</Linker>
 				<ExtraCommands>
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\..\..\..\bin\CodeBlocks10\$(TARGET_NAME)\QuimeraEngineCore.dll&quot; &quot;$(TARGET_OUTPUT_DIR)&quot; /Y' />
