--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Common/Common.cbp
@@ -5,7 +5,7 @@
 		<Option title="Common" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="Tests\;Tests\DataTypes\;Tests\General\;Tests\Memory\;TestSystem (shared)\;" />
+		<Option virtualFolders="Tests/;Tests/DataTypes/;Tests/General/;Tests/Memory/;TestSystem (shared)/;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -24,6 +24,8 @@
 					<Add option="-m32" />
 					<Add library="libQuimeraEngineCommon.a" />
 					<Add library="libboost_unit_test_framework-mt-d.a" />
+					<Add library="icudata" />
+					<Add library="icuuc" />
 					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/" />
 					<Add directory="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
@@ -45,7 +47,7 @@
 					<Add option="-DU_STATIC_IMPLEMENTATION" />
 				</Compiler>
 				<Linker>
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCommon.lib" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCommon.lib" />
 					<Add library="libboost_unit_test_framework-mt-d.a" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
@@ -73,7 +75,7 @@
 				</Compiler>
 				<Linker>
 					<Add library="libboost_unit_test_framework-mt-d.a" />
-					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtDynamic\QuimeraEngineCommon.dll" />
+					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtDynamic/QuimeraEngineCommon.dll" />
 					<Add library="libicudt.dll.a" />
 					<Add library="libicuuc.dll.a" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic" />
@@ -104,6 +106,8 @@
 					<Add option="-m32" />
 					<Add library="libQuimeraEngineCommon" />
 					<Add library="libboost_unit_test_framework-mt-d.a" />
+					<Add library="icudata" />
+					<Add library="icuuc" />
 					<Add directory="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/" />
 					<Add directory="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtDynamic" />
 				</Linker>
