--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -209,6 +209,7 @@
     <ClInclude Include="..\..\..\..\headers\QScalingMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QSpaceConversionMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QSphere.h" />
+    <ClInclude Include="..\..\..\..\headers\QTimeSpan.h" />
     <ClInclude Include="..\..\..\..\headers\QTransformationMatrix.h" />
     <ClInclude Include="..\..\..\..\headers\QTransformationMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QTranslationMatrix.h" />
@@ -253,6 +254,7 @@
     <ClCompile Include="..\..\..\..\source\QRotationMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QScalingMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QSpaceConversionMatrix.cpp" />
+    <ClCompile Include="..\..\..\..\source\QTimeSpan.cpp" />
     <ClCompile Include="..\..\..\..\source\QTransformationMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QTriangle2D.cpp" />
     <ClCompile Include="..\..\..\..\source\QVector2.cpp" />
