--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -5,7 +5,7 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="TestSystem (shared)\;Tests\;Tests\Math\;" />
+		<Option virtualFolders="TestSystem (shared)\;Tests\;Tests\Math\;Tests\Time\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
@@ -254,6 +254,9 @@
 		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_tools/QSphere_Test.cpp">
 			<Option virtualFolder="Tests/Math/" />
+		</Unit>
+		<Unit filename="../../../../tests/unit/testmodule_tools/QTimeSpan_Test.cpp">
+			<Option virtualFolder="Tests/Time/" />
 		</Unit>
 		<Unit filename="../../../../tests/unit/testmodule_tools/QTransformationMatrix3x3_Test.cpp">
 			<Option virtualFolder="Tests/Math/" />
